[package]
name = "deepcool-ch170"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
fixedstr = "0.5"
hidapi = { version = "2.6", default-features = false, features = [
  "windows-native",
] }
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
windows = { version = "0.62", features = [
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Memory",
] }
zerocopy = { version = "0.8", features = ["derive", "zerocopy-derive"] }

[profile.release]
opt-level = 3
lto = true
