[package]
name = "deepcool-ch170"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
hidapi = { version = "2.6", default-features = false, features = [
  "windows-native",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
zerocopy = { version = "0.8", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
